# embedded

./: .gitignore
atmega/alarm_clock/: README.md  platformio.ini
atmega/alarm_clock/src/: ClockAlarm_SM.cpp  ClockAlarm_SM.h  lcd.cpp  lcd.h  main.cpp  main.h
gpio/temp_sensor/: CMakeLists.txt  README.md  main.c
pico/: CMakeLists.txt
pico/freertos/: FreeRTOSConfig.h  Makefile
pico/i2c/: CMakeLists.txt  main.c
pico/motion/: README.md  main.py
pico/motion/test/: disable.py
pico/project/: Makefile  main.c
pico/temp_sensor/: main.c
